tests/paczka1/fuzzy1/70531815.err
Error in line 4: Xw9CeKXKYvB S198 28,6
Error in line 5: Xw9CeKXKYvB S98 9,1
Error in line 7: vGGqpRR0A A920 21,4
Error in line 31: dZfu A920 17,4
Error in line 39: Xw9CeKXKYvB 427 77,5
